--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background: transparent;
+  color: var(--text);
+  -webkit-font-smoothing: antialiased;
 }
